--- a/app/src/main/res/layout/info_item_section.xml
+++ b/app/src/main/res/layout/info_item_section.xml
@@ -12,7 +12,7 @@
             android:paddingTop="15dp"
             android:paddingStart="15dp"
             android:textColor="@color/colorPrimary"
-            android:background="#66ffffff"
+            android:background="#efefef"
             android:textSize="13sp"
             android:text="GENERAL"
             android:textStyle="bold" />
