--- a/app/src/main/res/layout/info_item_section.xml
+++ b/app/src/main/res/layout/info_item_section.xml
@@ -2,22 +2,24 @@
 <LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:orientation="vertical">
 
     <TextView
             android:id="@+id/sectionTitle"
             android:layout_width="match_parent"
-            android:layout_height="40dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
             android:paddingTop="15dp"
             android:paddingStart="15dp"
             android:textColor="@color/colorPrimary"
-            android:background="#efeff4"
+            android:background="#66ffffff"
             android:textSize="13sp"
             android:text="GENERAL"
             android:textStyle="bold" />
 
     <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="#c8c7cc"
