--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,10 @@
 
     <style name="RadioButton">
         <item name="android:textColor">@drawable/segment_button_text_color</item>
-        <item name="android:minHeight">33dp</item>
-        <item name="android:minWidth">70dp</item>
+        <item name="android:minHeight">30dp</item>
+        <item name="android:minWidth">66dp</item>
         <item name="android:gravity">center</item>
         <item name="android:button">@null</item>
-        <item name="android:paddingLeft">5dp</item>
-        <item name="android:paddingRight">5dp</item>
+        <item name="android:textSize">13sp</item>
     </style>
 </resources>
