--- a/app/src/main/res/layout/info_item_text_size.xml
+++ b/app/src/main/res/layout/info_item_text_size.xml
@@ -19,9 +19,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:textColor="@android:color/black"
-                android:text="Text Size"
-        />
+                android:text="Text Size"/>
 
         <com.westsamoaconsult.labtests.components.SegmentedGroup
                 android:id="@+id/segmentGroupText"
