--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,4 +7,8 @@
         <attr name="sc_checked_text_color" format="color" />
         <attr name="sc_unchecked_tint_color" format="color"/>
     </declare-styleable>
+
+    <declare-styleable name="DynamicSizeTextView">
+        <attr name="android:textColor" format="string" />
+    </declare-styleable>
 </resources>
