Bookmark second screen

--- a/app/src/main/res/layout/item_default.xml
+++ b/app/src/main/res/layout/item_default.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+        android:id="@+id/viewLayout"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -36,8 +37,9 @@
                         android:id="@+id/subTitle"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        android:text="SubTitle"/>
+                        android:lines="1"
+                        android:ellipsize="end"
+                        android:visibility="gone"/>
 
             ></LinearLayout>
 
