--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,12 +8,13 @@
         android:orientation="vertical"
         tools:context=".HomeActivity">
 
+    <include layout="@layout/action_bar" />
+
     <FrameLayout
             android:id="@+id/fragmentContainer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
-    />
+            android:layout_weight="1"/>
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigation"
