--- a/app/src/main/res/layout/item_default.xml
+++ b/app/src/main/res/layout/item_default.xml
@@ -41,7 +41,7 @@
                         android:ellipsize="end"
                         android:visibility="gone"/>
 
-            ></LinearLayout>
+            </LinearLayout>
 
             <ImageView
                     android:layout_width="30dp"
