--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -17,8 +17,7 @@
                 android:id="@+id/btnLeft"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
-                android:padding="5dp"
-                android:visibility="gone">
+                android:padding="5dp">
 
             <ImageView
                     android:layout_width="match_parent"
@@ -39,17 +38,15 @@
 
         <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
             android:id="@+id/btnRight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_gravity="end"
-            android:padding="5dp"
-            android:visibility="gone">
+            android:padding="4dp">
 
             <ImageView
                 android:id="@+id/btnRightImage"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:visibility="gone"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:src="@drawable/star_nonfilled_22" />
 
             <TextView
