--- a/app/src/main/res/layout/info_item_section.xml
+++ b/app/src/main/res/layout/info_item_section.xml
@@ -6,6 +6,13 @@
     android:layout_height="40dp"
     android:orientation="vertical">
 
+    <View
+        android:id="@+id/topBar"
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:visibility="gone"
+        android:background="#f5f5f8" />
+
     <TextView
         android:id="@+id/sectionTitle"
         android:layout_width="match_parent"
