--- a/app/src/main/res/layout/detail_item_text.xml
+++ b/app/src/main/res/layout/detail_item_text.xml
@@ -11,7 +11,10 @@
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:textColor="#555"
+        android:lineSpacingExtra="5dp"
         android:text="Text"/>
 
 </RelativeLayout>
