--- a/app/src/main/res/layout/detail_item_header.xml
+++ b/app/src/main/res/layout/detail_item_header.xml
@@ -21,12 +21,21 @@
             android:textColor="#555"
             android:text="Text"/>
 
-        <ImageView
-            android:id="@+id/headerImage"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginLeft="16dp"
-            android:src="@drawable/ic_arrow_next"/>
+        <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
+            android:id="@+id/btnImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp">
+
+            <ImageView
+                android:id="@+id/headerImage"
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:src="@drawable/ic_arrow_next"/>
+
+        </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
+
+
 
     </LinearLayout>
 
