--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -22,7 +22,7 @@
             <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@drawable/back" />
+                    android:background="@drawable/back" />
 
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
 
@@ -47,7 +47,7 @@
                 android:id="@+id/btnRightImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/star_nonfilled_22" />
+                android:background="@drawable/star_nonfilled_22" />
 
             <TextView
                 android:id="@+id/btnRightText"
@@ -56,8 +56,7 @@
                 android:text="Edit"
                 android:textSize="17sp"
                 android:visibility="gone"
-                android:textColor="#ffffff"
-                android:src="@drawable/star_nonfilled_22" />
+                android:textColor="#ffffff" />
 
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
     </android.support.v7.widget.Toolbar>
