--- a/app/src/main/res/layout/detail_item_header.xml
+++ b/app/src/main/res/layout/detail_item_header.xml
@@ -30,8 +30,7 @@
             <ImageView
                 android:id="@+id/headerImage"
                 android:layout_width="75dp"
-                android:layout_height="75dp"
-                android:src="@drawable/ic_arrow_next"/>
+                android:layout_height="75dp" />
 
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
 
