--- a/app/src/main/res/layout/detail_item_image.xml
+++ b/app/src/main/res/layout/detail_item_image.xml
@@ -13,6 +13,6 @@
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_arrow_next"/>
+        android:background="@drawable/ic_arrow_next"/>
 
 </RelativeLayout>
