--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.AppBarLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:theme="@style/AppTheme.AppBarOverlay">
 
     <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            app:contentInsetStart="7dp"
-            app:contentInsetEnd="7dp"
-            android:layout_height="?attr/actionBarSize">
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        app:contentInsetStart="7dp"
+        app:contentInsetEnd="7dp">
 
         <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
                 android:id="@+id/btnLeft"
@@ -38,24 +38,26 @@
 
         <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
             android:id="@+id/btnRight"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
-            android:layout_gravity="end"
-            android:padding="4dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="end">
 
             <ImageView
                 android:id="@+id/btnRightImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="27dp"
+                android:layout_height="27dp"
+                android:layout_margin="4dp"
+                android:visibility="gone"
                 android:background="@drawable/star_nonfilled_22" />
 
             <TextView
                 android:id="@+id/btnRightText"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginRight="7dp"
                 android:text="Edit"
                 android:textSize="17sp"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:textColor="#ffffff" />
 
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
