--- a/app/src/main/res/layout/bookmark_first_item.xml
+++ b/app/src/main/res/layout/bookmark_first_item.xml
@@ -15,8 +15,7 @@
         <ImageView
                 android:id="@+id/imageView"
                 android:layout_width="60dp"
-                android:layout_height="60dp"
-                android:tint="#c7c7cc"/>
+                android:layout_height="60dp" />
 
         <LinearLayout
                 android:layout_width="match_parent"
