--- a/app/src/main/res/layout/detail_item_image.xml
+++ b/app/src/main/res/layout/detail_item_image.xml
@@ -3,16 +3,14 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingStart="16dp"
-    android:paddingEnd="16dp"
-    android:paddingTop="9dp"
-    android:paddingBottom="9dp"
+    android:padding="16dp"
     android:background="@android:color/white">
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/ic_arrow_next"/>
+        android:src="@drawable/ic_arrow_next"
+        android:adjustViewBounds="true" />
 
 </RelativeLayout>
