--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -14,15 +14,16 @@
         app:contentInsetEnd="7dp">
 
         <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
-                android:id="@+id/btnLeft"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:padding="5dp">
+            android:id="@+id/btnLeft"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:padding="5dp"
+            android:visibility="gone">
 
             <ImageView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:src="@drawable/back" />
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/back" />
 
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
 
@@ -48,6 +49,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="20dp"
+                android:visibility="gone"
                 android:layout_weight="1">
 
                 <EditText
@@ -83,7 +85,8 @@
             <com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout
                 android:id="@+id/btnRight"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:visibility="gone">
 
                 <ImageView
                     android:id="@+id/btnRightImage"
