--- a/app/src/main/res/layout/info_item_section.xml
+++ b/app/src/main/res/layout/info_item_section.xml
@@ -21,6 +21,6 @@
         android:id="@+id/divider"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#c8c7cc" />
+        android:background="#d6d6da" />
 
 </LinearLayout>
