--- a/app/src/main/res/layout/activity_disclaimer.xml
+++ b/app/src/main/res/layout/activity_disclaimer.xml
@@ -5,7 +5,9 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/action_bar" />
+    <include
+        android:id="@+id/leftActionBar"
+        layout="@layout/action_bar" />
 
     <WebView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/webView"
