--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -8,13 +8,16 @@
         android:orientation="vertical"
         tools:context=".HomeActivity">
 
-    <include layout="@layout/action_bar" />
+    <include
+        android:id="@+id/leftActionBar"
+        layout="@layout/action_bar" />
 
     <FrameLayout
-            android:id="@+id/fragmentContainer"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"/>
+        android:id="@+id/fragmentLeftContainer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:background="#efeff4" />
 
     <android.support.design.widget.BottomNavigationView
             android:id="@+id/bottomNavigation"
