--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -21,6 +21,7 @@
             android:visibility="gone">
 
             <ImageView
+                android:id="@+id/btnLeftImage"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:src="@drawable/back" />
