Title bar max width

--- a/app/src/main/res/layout/action_bar.xml
+++ b/app/src/main/res/layout/action_bar.xml
@@ -29,13 +29,15 @@
         </com.westsamoaconsult.labtests.utils.TapOpacityHighlightLayout>
 
         <TextView
-                android:id="@+id/actionBarTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:textSize="18sp"
-                android:textColor="#ffffff" />
+            android:id="@+id/actionBarTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:lines="1"
+            android:ellipsize="end"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="#ffffff" />
 
         <LinearLayout
             android:id="@+id/rightLayout"
